# enbox-rust-core

./: .enbox-version  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile.toml  NOTICE  README.md  flake.nix
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: osv-scanner.yml  tests.yaml
crates/dwn-rs-core/: Cargo.toml
crates/dwn-rs-core/schemas/: authorization-owner.json
crates/dwn-rs-core/schemas/interface-methods/: messages-filter.json  messages-read.json  messages-subscribe.json  messages-sync.json  progress-token.json  protocol-definition.json  protocol-rule-set.json  protocols-configure.json  protocols-query.json  records-count.json  records-filter.json  records-query.json  records-read.json  records-subscribe.json  records-write-unidentified.json
crates/dwn-rs-core/schemas/permissions/: permission-grant-data.json  permissions-definitions.json  scopes.json
crates/dwn-rs-core/schemas/signature-payloads/: records-write-signature-payload.json
crates/dwn-rs-core/src/: agent.rs  connect.rs  core_protocol.rs  desktop.rs  desktop_server.rs  desktop_ws.rs  dwn.rs  errors.rs  lib.rs  local.rs  message_validation.rs  mobile.rs  native_dwn.rs  permissions.rs  resumable_task_manager.rs  ser.rs  setup.rs  state_index.rs  storage_controller.rs  stores.rs  sync.rs  sync_endpoint.rs  sync_ledger.rs  value.rs
crates/dwn-rs-core/src/auth/: authorization.rs  jws.rs  mod.rs  universal_resolver.rs
crates/dwn-rs-core/src/dwn/: builder.rs  mod.rs  validation.rs
crates/dwn-rs-core/src/encryption/: errors.rs  mod.rs
crates/dwn-rs-core/src/events/: emitter.rs  stream.rs  subscription.rs
crates/dwn-rs-core/src/filters/: matching.rs  message_filters.rs  mod.rs
crates/dwn-rs-core/src/handlers/: messages.rs  mod.rs  protocols.rs  records.rs
crates/dwn-rs-core/src/handlers/messages/: common.rs  mod.rs  read.rs  subscribe.rs  sync.rs  tests.rs
crates/dwn-rs-core/src/handlers/protocols/: common.rs  configure.rs  mod.rs  query.rs  tests.rs
crates/dwn-rs-core/src/handlers/records/: common.rs  count.rs  delete.rs  mod.rs  query.rs  read.rs  subscribe.rs  tests.rs  write.rs
crates/dwn-rs-core/src/identity/: connect.rs  mod.rs  setup.rs
crates/dwn-rs-core/src/interfaces/messages/: fields.rs  mod.rs  protocols.rs
crates/dwn-rs-core/src/interfaces/messages/descriptors/: descriptor.rs  general.rs  kind.rs  messages.rs  mod.rs  protocols.rs  records.rs  schemas.rs  traits.rs
crates/dwn-rs-core/src/interfaces/messages/descriptors/messages/: mod.rs  parameters.rs  tests.rs
crates/dwn-rs-core/src/interfaces/messages/descriptors/protocols/: mod.rs  parameters.rs  tests.rs
crates/dwn-rs-core/src/interfaces/messages/descriptors/records/: mod.rs  parameters.rs  tests.rs
crates/dwn-rs-core/src/interfaces/replies/: mod.rs
crates/dwn-rs-core/src/runtime/: mod.rs
crates/dwn-rs-core/src/runtime/desktop/: mod.rs  server.rs  ws.rs
crates/dwn-rs-core/src/stores/: memory.rs  mod.rs  state_index.rs
crates/dwn-rs-core/src/sync/: endpoint.rs  mod.rs
crates/dwn-rs-core/src/tasks/: manager.rs  mod.rs
crates/dwn-rs-core/src/utils/: cid.rs  mod.rs
crates/dwn-rs-core/tests/: conformance_fixtures.rs  conformance_helpers.rs  loopback_server.rs  wallet_recovery.rs
crates/dwn-rs-message-derive/: Cargo.toml
crates/dwn-rs-message-derive/src/: lib.rs
crates/dwn-rs-message-derive/src/derive/: descriptor.rs  interface.rs  mod.rs
crates/dwn-rs-remote/: Cargo.toml
crates/dwn-rs-remote/src/: lib.rs
crates/dwn-rs-stores/: Cargo.toml
crates/dwn-rs-stores/examples/: in_memory_dwn.rs  loopback_interop_server.rs  store_injection_server.rs
crates/dwn-rs-stores/src/: lib.rs  native_node.rs  sqlite.rs  sqlite_agent.rs  sqlite_aux.rs  sqlite_sync_ledger.rs
crates/dwn-rs-stores/src/sqlite/: conn.rs  data_store.rs  event_log.rs  message_store.rs  mod.rs  query.rs  resumable_task_store.rs  secrets_store.rs  state_index.rs  store.rs  sync_ledger.rs
crates/dwn-rs-stores/src/surrealdb/: core.rs  data_store.rs  event_log.rs  message_store.rs  mod.rs  resumable_task_store.rs
crates/dwn-rs-stores/tests/: native_dwn_integration.rs  native_dwn_sync_integration.rs  sqlite_aux_persistence.rs  sqlite_event_log_progress_integration.rs  sync_integration.rs  sync_ledger_integration.rs
crates/enbox-ffi/: Cargo.toml  README.md  generate-bindings.sh
crates/enbox-ffi/src/: connect.rs  http_registration.rs  lib.rs  setup.rs
docs/: BACKGROUND_SYNC.md  BINDINGS.md  CONFORMANCE.md  DESKTOP_LOCAL_NODE.md  MIGRATION_GUIDE.md  MIGRATION_PLAN.md  MOBILE_INTEGRATION.md  ROADMAP.md  SPEC_DIVERGENCE.md  STORES_SDK_JS.md  SYNC_LIVE_POLL.md  TEST_COVERAGE.md
fixtures/: README.md  manifest.json
fixtures/crypto/: cid-dag-pb-values.json  cid-json-values.json  jwe-encryption.json  jws-general.json
fixtures/dwn/messages/: basic-interface-messages.json  process-replies.json  sync-descriptors.json  sync-replies.json
fixtures/dwn/protocols/: authorization-corpus.json  configure-definitions.json  permissions-grant-query.json  permissions-protocol-records.json
fixtures/dwn/records/: tag-query-filters.json
fixtures/dwn/state-index/: operations.json
fixtures/spec/: manifest.json
fixtures/spec/cid/: dag-cbor.json
fixtures/spec/crypto/: jws-ed25519-rfc8037.json
fixtures/spec/did/: did-jwk.json  did-key-ed25519.json
fixtures/spec/divergence/: ledger.json
fixtures/spec/records/: descriptor-cid.json
tools/conformance/: check-fixture-provenance.sh  conformance-persona.ts  generate-permissions-grant-query-fixtures.ts  generate-tag-query-fixtures.ts  typescript-cid.test.ts  typescript-descriptor-roundtrip.test.ts  typescript-jwe.test.ts  typescript-jws.test.ts  typescript-message-process.test.ts  typescript-messages-sync.test.ts  typescript-protocol-authorization.test.ts  typescript-records-query.test.ts  typescript-state-index.test.ts
tools/interop/: interop-persona.ts  loopback-interop.test.ts  loopback-server.ts  rust-sqlite-message-store.ts  store-injection-server.ts  testsuite-injection.test.ts
