[package]
name = "dwn-rs-stores"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Traits and common types for implementing DWN stores for dwn-rs"

[lib]
crate-type = ["rlib"]

[features]
# Sqlite is the actively-developed backend that implements the new
# `MessageStore`/`DataStore`/`EventLog`/`StateIndex`/`ResumableTaskStore`
# traits.
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
no-std = []


[dependencies]
futures-util = "0.3.30"
chrono = { version = "0.4.37", features = ["serde", "wasmbind"] }
cid = { version = "0.11.1", features = ["serde"] }
thiserror = "1.0.63"
time = "0.3.36"
tokio = { version = "1.39.2", features = [
    "io-util",
    "rt",
    "rt-multi-thread",
    "macros",
    "sync",
    "signal",
] }
tracing = { version = "0.1.40", default-features = false, features = [
    "attributes",
] }
serde = { version = "1.0.183", features = ["derive"] }
serde_ipld_dagcbor = "0.6.0"
serde_with = "3.4.0"
rusqlite = { version = "0.38", features = ["bundled"], optional = true }

ulid = { version = "1.1.2", features = ["serde"] }
url = { version = "2.5.0", features = ["serde"] }

dwn-rs-core = { path = "../dwn-rs-core", default-features = false }
serde_json = "1.0.122"
async-std = { version = "1.12.0", default-features = false, features = [
    "async-global-executor",
    "async-io",
    "futures-lite",
    "kv-log-macro",
    "pin-project-lite",
] }
memoize = { version = "0.4.2", default-features = false }
bytes = { version = "1.8.0", features = ["serde"] }
deadpool-sqlite = "0.13.0"

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.10"
tokio = { version = "1.39.2", features = ["macros", "rt", "rt-multi-thread"] }
tokio-util = "0.7.12"

[[example]]
name = "in_memory_dwn"
path = "examples/in_memory_dwn.rs"
required-features = ["sqlite"]

[[example]]
name = "loopback_interop_server"
path = "examples/loopback_interop_server.rs"
required-features = ["sqlite"]

[[example]]
name = "store_injection_server"
path = "examples/store_injection_server.rs"
required-features = ["sqlite"]
