[package]
name = "enbox-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UniFFI facade for Enbox native DWN integrations"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
dwn-rs-core = { path = "../dwn-rs-core" }
dwn-rs-stores = { path = "../dwn-rs-stores" }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "2.0.3"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
uniffi = { version = "0.29.4", features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"


[dev-dependencies]
