[package]
name = "enbox-ffi"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UniFFI facade for Enbox native DWN integrations"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dwn-rs-core = { path = "../dwn-rs-core" }
dwn-rs-stores = { path = "../dwn-rs-stores" }
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "2.0.3"
tokio = { version = "1.39.2", features = ["rt", "rt-multi-thread", "macros"] }
ulid = "1.0"
uniffi = { version = "0.29.4", features = ["cli"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"


[dev-dependencies]
axum = { version = "0.8.8", default-features = false, features = ["json", "http1", "tokio"] }
tempfile = "3.10.1"
tokio = { version = "1.39.2", features = ["full"] }